--- a/src/sass/page/_about.scss
+++ b/src/sass/page/_about.scss
@@ -1,3 +1,7 @@
+.wrapper_about{
+    max-width: 1280px;
+    padding:0 40px;
+}
 .about_title{
     font-size:36px;
     color: #57FFF5;
@@ -10,6 +14,7 @@
     position: absolute;
     right: 10vw;
     bottom: 100px;
+    text-align: center;
 }
 // .about_slogan{
 //     position: absolute;
@@ -18,13 +23,19 @@
 //     color: white;
 // }
 
-// @media  (max-width:1120px) {
-//     .about_slogan{
+@media (min-width: 768px) and (max-width:1200px) {
+    .about_slogan{
+        right: 0;
+        bottom: 0;
+    }
+}
 
-        
-        
-//     }
-// }
+@media (min-width: 992px) and (max-width: 1199px){
+    .about_slogan{
+        right: 0;
+        bottom: 0;
+    }
+  }
 
 .about_agenda{
     // background-image: url("/img/about/middle_2.png");
@@ -98,18 +109,27 @@
 }
 
 // 分三塊
+// .about_speakers{
+//     display: grid;
+//     grid-template-rows: auto;
+//     grid-template-columns: 1fr 1fr 1fr;
+//     gap:80px 40px;
+// }
+
 .about_speakers{
-    display: grid;
-    grid-template-rows: auto;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap:80px 40px;
+    display: flex;
+    align-content: space-between;
+    justify-content: space-around
 }
 
 
 
-// background-position: right top;
-// height: 100%;
-// padding-top: calc(100% * (9/16));
+@media (max-width:1100px) {
+    .about_speakers{
+        flex-wrap: wrap;
+    }
+
+}
 
 //輪播
 
