fix:修改footer無背景顏色問題，修改nav在RWD跑版問題

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
     border-top: 1px solid $main-color;
+    background-color: $black-color;
     @include laptop(1200px) {
         @include flex-box-column(100%);
     }
