--- a/src/sass/page/_index.scss
+++ b/src/sass/page/_index.scss
@@ -1,12 +1,9 @@
 // section
-.index_block {
-    height: 100vh;
-    background-image: url(../img/index/01.jpg);
-    max-width: 100%;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    position: relative; // w/ div.index_title
+img {
+width: 100vw;
+position: relative; // w/ div.index_title
 }
+
 
 // div&h1
 .index_title {
@@ -17,23 +14,27 @@
     transform: translateX(-50%);
 }
 
-// spotlight on title  (無法自適應寬度減少的狀況，::after無法折行)
-.index_title h1 {
-    position: relative;
+// spotlight on title
+.index_title{
+    margin-top: 100px;
+    // @include relative();
+
+    .index_title h1 {
+        position: relative;
+        text-shadow: 1px 1px 1px (rgba($second-color, 0.7));
+    }
 }
 
 .index_title h1::after {
     content: attr(data-spotlight);
+    width: 110%;
     color: transparent;
     position: absolute;
     top: 0;
     left: 0;
-    width: 1000px;
     -webkit-clip-path: ellipse(100px 100px at 0% 50%);
     clip-path: ellipse(100px 100px at 0% 50%);
     animation: spotlight 3s infinite;
-
-    // background: url(https://images.unsplash.com/photo-1579546929662-711aa81148cf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
     background: $accent-color; /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, $accent-color, #dc3005); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(
@@ -42,7 +43,7 @@
         #dc3005
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-    background-size: 150%;
+    background-size: 100%;
     background-position: left top;
     -webkit-background-clip: text;
     background-clip: text;
@@ -63,16 +64,71 @@
     }
 }
 
-// swiper css
-.index_swiper_container {
-    width: 950px;
+// 輪播設定
+.index_block {
+    @include relative();
+}
 
+.index_swiper_wrapper{
+    @include absolute(25%, null, null, 50%);
+    transform: translateX(-50%);
+    width: 60vw;
+
+    .index_swiper_container {
+        width: 100%;
+
+        .index_slide {
+            // margin-top: 170px;
+            background-position: center;
+            background-size: cover;
+            width: 22vw;
+            height: 22vw;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            a {
+                &:hover {
+                    color: $main-color;
+                }
+                img {
+                    display: block;
+                    width: 100%;
+                    @include relative();
+                }
+                div {
+                    @include absolute(50%, null, null, 50%);
+                    transform: translate(-50%, -50%);
+
+                    h2,
+                    h3 {
+                        text-align: center;
+                        letter-spacing: 2px;
+                        text-shadow: 1px 1px 1px rgba($second-color, 0.7);
+                        margin-bottom: auto;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+//rwd 1400px-1600px
+@media (min-width: 1400px) and (max-width: 1599.98px){
+    .index_title {
+        h1 {
+            font-size: 44px;
+        }
+    }
+    
     .index_slide {
-        margin-top: 170px;
+        // margin-top: 170px;
         background-position: center;
         background-size: cover;
-        width: 300px;
-        height: 300px;
+        width: 22vw;
+        height: 30vw;
 
         display: flex;
         justify-content: center;
@@ -88,10 +144,8 @@
                 @include relative();
             }
             div {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                @include absolute(33%, 30%);
+                @include absolute(50%, null, null, 50%);
+                transform: translate(-50%, -50%);
 
                 h2,
                 h3 {
@@ -102,5 +156,10 @@
                 }
             }
         }
-    }
+}
+
+
+// rwd 1200px-1400px
+@media (min-width: 1200px) and (max-width: 1399.98px){
+
 }
