--- a/src/sass/layout/_login.scss
+++ b/src/sass/layout/_login.scss
@@ -16,7 +16,7 @@ form.login {
         transform: translate(-50%,-50%);
         overflow: hidden;
         z-index: 3;
-        a.btn-close {
+        a.login_btn-close {
             display: block;
             color: $second-color;
             position: absolute;
@@ -29,17 +29,18 @@ form.login {
             padding: 0;
             outline: none;
             border: none;
+            z-index: 10;
+            &:active{
+                transform: translateY(4px);
+            }
             i.fa-solid{
                 color: $second-color;
                 text-align: center;
                 line-height: 40px;
                 font-size: 40px;
-            }
-            &:hover{
-                color: $main-color;
-            }
-            &:active{
-                transform: translateY(4px);
+                &:hover{
+                    color: $main-color;
+                }
             }
             
         }
@@ -132,20 +133,27 @@ form.login {
                 }
             }
         }
+        .js-block {
+            display: block;
+        }
         .company-sign-in-container {
             order: 1;
             background-color: $black-color;
+            z-index: 3;
             // transform: translateX(0);
             // @include relative(0, 0, 0, 0, 2);
             // position: relative;
+        }
+        .js-block {
+            display: block;
         }
         .company-sign-up-container {
             // @include absolute(0, 0, 0, 0, 2);
             position: absolute;
             top: 0;
             right: 0;
-            display: none;
-            // z-index: 4;
+            // display: none;
+            z-index: 2;
         }
         .guest-sign-in-container,
         .company-sign-up-container {
@@ -199,6 +207,9 @@ form.login {
                 color: $black-color;
             }
         }
+        .guest-sign-in-container{
+            z-index: 2;
+        }
         .received-form {
             width: 410px;
             height: 508px;
@@ -230,6 +241,7 @@ form.login {
             }
         }
         .form-forget-password {
+
             width: 410px;
             height: 508px;
             border: 1px solid $main-color;
@@ -237,9 +249,12 @@ form.login {
             right: 0;
             top: 0;
             display: none;
+            z-index: 2;
+            background-color: $black-color;
+            
             .h2-forget{
                 text-align: center;
-                margin-top: 90px;
+                margin-top: 100px;
             }
             ul {
                 @include flex-box-between(230px);
@@ -257,16 +272,21 @@ form.login {
                 margin-top: 30px;
             }
         }
-        article.overlay-container {
+        .js-block {
+            display: block;
+        }
+        .overlay-container {
             width: 410px;
             height: 508px;
             border: 1px solid $main-color;
-            background-image: url(../img/login/Maskgroup.png);
+            background-image: url(../img/login/Mask_group.png);
             position: absolute;
-            right: 0;
+            left: 0;
             top: 0;
-            display: none;
+            // display: none;
+            z-index: 1;
             .welcome {
+                color: $second-color;
                 text-align: center;
                 margin-top: 90px;
             }
@@ -279,6 +299,9 @@ form.login {
                 margin: 0 auto;
             }
         }
+        // .js-none {
+        //     display: none;
+        // }
     }
 }
 
@@ -286,12 +309,13 @@ form.-login_page_icon {
     display: block; 
 }
 
-.js-block {
-    display: block;
-}
 
 .js-none {
     display: none;
+}
+
+.js-block {
+    display: block;
 }
 
 .js-hide {
