--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -225,4 +225,12 @@ a {
 .-border_maincolor{
   border:1px solid $main-color;
   border-radius: 10px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px  $main-color;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px  $main-color;
+}
+.-border_bgcolor{
+  border:1px solid $accent-color;
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px  $accent-color;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px  $accent-color;
 }
